@@ -24,7 +24,7 @@ General
 
   Top LCD panel is flashing
   
-  Green button does not work for newer cameras. It freezes.
+  Green button does not work for newer cameras. It does nothing.
 
 Linux
 -----
