@@ -20,6 +20,7 @@ version 0.84.03
 	Handling new exposure submodes: Forest, NightSceneHDR, BacklightSilhouette, BlueSky
 	Renaming exposure submode to scene mode
 	--settings_hex
+	Avoid infinite loop if green button fails
 
 version 0.84.02 ( 2016-10-31 )
 	Android code cleanup
